--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "shopapp": "file:..",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
