--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node server/seeder.js",
-    "data:destroy": "node server/seeder.js -d"
+    "data:destroy": "node server/seeder.js -d",
+    "build":"npm install && npm install --prefix client && npm run build --prefix client "
   },
   "author": "",
   "license": "ISC",
