--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node server/seeder.js",
     "data:destroy": "node server/seeder.js -d",
-    "build":"npm install && npm install --prefix client && npm run build --prefix client "
+    "build": "npm install && npm install --prefix client && npm run build --prefix client "
   },
   "author": "",
   "license": "ISC",
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.2"
   },
   "devDependencies": {
     "dotenv": "^16.3.1"
